tests/toy/neg/000278_mutation.toylang
program a = { else a then sleep; } .
